<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="14dp"
        android:text="@string/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="119dp"
        android:layout_height="116dp"
        android:layout_marginStart="31dp"
        android:contentDescription="@string/donut"
        android:layout_marginTop="32dp"
        android:onClick="apantalla1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/donut_circle" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ice_cream_sandwich"
        android:onClick="apantalla2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut"
        app:srcCompat="@drawable/icecream_circle" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="122dp"
        android:layout_height="119dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/froyo"
        android:layout_marginTop="20dp"
        android:onClick="apantalla3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ice_cream"
        app:srcCompat="@drawable/froyo_circle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:text="@string/donutDesc"
        app:layout_constraintStart_toEndOf="@+id/donut"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:text="@string/iceCreamDesc"
        app:layout_constraintStart_toEndOf="@+id/ice_cream"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="158dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/froyoDesc"
        app:layout_constraintStart_toEndOf="@+id/froyo"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>